@@ -2187,3 +2187,6 @@ Version		Change Log
 	ListCrossoverPipeline handles 2-point crossover with more uniform choices
 		of loci (using rejection sampling).
 	GE now can handle wrapping of genomes when they produce oversize trees
+	Fixed problem where GE mapping wasn't bothering to set the argposition or
+		parent of the GPnodes.  This didn't cause problems unless we were
+		doing strongly typed GP.
